创建UI相关控制文件

--- a/Project.uvprojx
+++ b/Project.uvprojx
@@ -680,6 +680,16 @@
               <FileType>5</FileType>
               <FilePath>.\System\PWM.h</FilePath>
             </File>
+            <File>
+              <FileName>UI.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\System\UI.c</FilePath>
+            </File>
+            <File>
+              <FileName>UI.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\System\UI.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
